crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/auto with negative - hit on excluded inferred file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run auto-with-negative
$ print-file src/main.ts dist/output.js
export const main = 'initial';
// initial output
> replace-file-content dist/output.js initial modified

> vp run auto-with-negative
$ print-file src/main.ts dist/output.js ✓ cache hit, replaying
export const main = 'initial';
// initial output

---
[vp run] cache hit, <duration> saved.
