crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/auto with negative - miss on non-excluded inferred file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run auto-with-negative
$ print-file src/main.ts dist/output.js
export const main = 'initial';
// initial output
> replace-file-content src/main.ts initial modified

> vp run auto-with-negative
$ print-file src/main.ts dist/output.js ✗ cache miss: content of input 'src/main.ts' changed, executing
export const main = 'modified';
// initial output
