crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/empty inputs.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run empty-inputs
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content src/main.ts initial modified

> vp run empty-inputs
$ print-file src/main.ts ✓ cache hit, replaying
export const main = 'initial';

---
[vp run] cache hit, <duration> saved.
> json-edit vite-task.json "_.tasks['empty-inputs'].command = 'print-file src/utils.ts'"

> vp run empty-inputs
$ print-file src/utils.ts ✗ cache miss: args changed, executing
export const utils = 'initial';
