crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/folder slash input - hit on file outside directory.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run folder-slash-input
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content test/main.test.ts outside modified

> vp run folder-slash-input
$ print-file src/main.ts ✓ cache hit, replaying
export const main = 'initial';

---
[vp run] cache hit, <duration> saved.
